--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -78,8 +78,8 @@ jobs:
       uses: actions/upload-artifact@v3.1.2
       with:
         path: |
-          *.lib
-          *.a
+          build/*.lib
+          build/*.a
         retention-days: 14
         name: LuminaryOS
   
