--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -81,5 +81,5 @@ jobs:
           build/*.lib
           build/*.a
         retention-days: 14
-        name: LuminaryOS
+        name: SpellCheckLib
   
