--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -25,7 +25,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest]
         build_type: [Release]
-        c_compiler: [gcc, clang, cl]
+        c_compiler: [gcc, clang]
         include:
           - os: windows-latest
             c_compiler: gcc
@@ -66,7 +66,7 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} --target SpellCheckLib -j 32
+      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config Release --target SpellCheckLib -j 32
 
     - name: Test
       working-directory: ${{ steps.strings.outputs.build-output-dir }}
