--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -40,9 +40,9 @@ jobs:
           - os: windows-latest
             c_compiler: gcc
           - os: windows-latest
-            c_compiler: clang
+            c_compiler: gcc
           - os: ubuntu-latest
-            c_compiler: cl
+            c_compiler: gcc
 
     steps:
     - uses: actions/checkout@v3
